...
      Tab(value: .overview) {
        NavigationStack(path: $router.overviewPath) {
          OverviewView().navigationDestination(for: Route.self, destination: destination)
            .modifier(SelectionNavigationModifier(tab: .overview))
        }
      } label: {
        Image("NavigationOverview").renderingMode(.template).accessibilityLabel("Overview")
      }
      Tab(value: .watchlists) {
        NavigationStack(path: $router.watchlistsPath) {
          WatchlistsView().navigationDestination(for: Route.self, destination: destination)
            .modifier(SelectionNavigationModifier(tab: .watchlists))
        }
...
